# hashinator

./: README.md  meson.build
include/: common.h
include/hashinator/: hashinator.h
include/splitvector/: split_allocators.h  split_tools.h  splitvec.h
unit_tests/: Makefile
unit_tests/benchmark/: main.cu
unit_tests/custom_allocator/: unit.cu
unit_tests/gtest_vec_device/: memtest.h  vec_test.cu
unit_tests/gtest_vec_host/: vec_test.cu
unit_tests/hashmap_unit_test/: main.cu
unit_tests/memtest/: log.txt  memtest.cpp  memtest.cu  memtest.h
unit_tests/umpire_tests/: hashinator.cu  vec_device.cu  vec_host.cu
